[tool.poetry]
name = "cdk-scripts"
version = "0.1.0"
description = ""
authors = ["Chris Sanders <sanders.chris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
confuse = "^1.4.0"
gspread = "^3.7.0"
gspread-formatting = "^0.3.7"
pandas = "1.2.2"
PyGithub = "^1.54.1"
py-trello = "^0.17.1"
launchpadlib = "^1.10.13"
jira = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
